--- a/src/assets/stylesheets/Object/utility/common.scss
+++ b/src/assets/stylesheets/Object/utility/common.scss
@@ -4,3 +4,10 @@
 .bg_baseBrown-50 {
   background-color: $baseBrown-50;
 }
+
+.color-annotation {
+  color: $annotation;
+}
+.center {
+  text-align: center;
+}
