--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -1,5 +1,9 @@
 @import "Foundation/base";
 @import "Foundation/colors";
 
+@import "Layout/main";
+
+@import "Object/components/comment";
 @import "Object/utility/common";
 @import "Object/utility/box_model";
+@import "Object/utility/font_size";
