add second section

--- a/src/assets/stylesheets/Foundation/base.scss
+++ b/src/assets/stylesheets/Foundation/base.scss
@@ -2,3 +2,8 @@ html {
   font-family: "メイリオ", "Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体", "メイリオ", sans-serif;
   line-height: 1.7;
 }
+
+ul {
+  margin: 0;
+  padding: 0;
+}
