--- a/src/assets/stylesheets/Object/utility/common.scss
+++ b/src/assets/stylesheets/Object/utility/common.scss
@@ -7,6 +7,9 @@
 .bg-darkBrown {
   background-color: $darkBrown;
 }
+.bg-white {
+  background-color: white;
+}
 
 .color-annotation {
   color: $annotation;
