--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "Foundation/colors";
 
 @import "Layout/main";
+@import "Layout/fixed_menu";
 
 @import "Object/components/speech_bubble";
 @import "Object/utility/common";
