--- a/src/assets/stylesheets/Layout/fixed_menu.scss
+++ b/src/assets/stylesheets/Layout/fixed_menu.scss
@@ -1,14 +1,22 @@
 .fixed_menu {
+  &_wrapper {
+    width: 100%;
+    background-color: white;
+    box-shadow: 0px -2px 6px 0 rgba(0,0,0,0.4);
+    padding: 0 20px;
+    height: 65px;
+    position: fixed;
+    bottom: 0;
+  }
   width: 100%;
-  background-color: white;
-  box-shadow: 0px -2px 6px 0 rgba(0,0,0,0.4);
-  padding: 0 20px;
-  height: 65px;
-  position: fixed;
-  bottom: 0;
+  @media screen and (min-width: 750px) {
+    width: 750px;
+    margin: 0 auto;
+  }
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  height: 100%;
   &_item {
     display: flex;
     align-items: center;
