--- a/src/assets/stylesheets/Layout/main.scss
+++ b/src/assets/stylesheets/Layout/main.scss
@@ -1,13 +1,11 @@
 .main {
-  @media screen and (min-width: 750px) {
-    width: 750px;
-  }
-  &_wrapper {
-    display: flex;
-    justify-content: center;
+  &_section {
+    @media screen and (min-width: 750px) {
+      width: 750px;
+      margin: 0 auto;
+    }
+    padding: 0 5%;
+    width: 100%;  
   }
 }
 
-.section_inner {
-  padding: 0 5%;
-}
